# pfml-ai-take-home

./: README.md  UBIQUITOUS_LANGUAGE.md  brief.md  design.md  justfile  pyproject.toml
faas/pfml-claims-lifecycle/: arch.md  automate.md  find.md
src/: app.py
src/adjudication/adapters/: api.py
src/adjudication/application/: create_case.py  decide_case.py  event_handlers.py
src/adjudication/domain/: adjudication_case.py  events.py
src/adjudication/ports/: case_repository.py
src/claims/adapters/: api.py
src/claims/application/: apply_adjudication_result.py  check_eligibility.py  event_handlers.py  handle_employer_timeout.py  record_employer_response.py  submit_claim.py
src/claims/domain/: claim.py  document.py  eligibility_policy.py  employer_response.py  events.py
src/shared/: domain_event.py  event_bus.py  in_memory_event_bus.py  in_memory_scheduler.py  scheduler.py  types.py
tests/: conftest.py
tests/api/: test_adjudication_api.py  test_claims_api.py
tests/application/: test_apply_adjudication_result.py  test_check_eligibility.py  test_create_payment_schedule.py  test_disburse_payment.py  test_employer_notified_handler.py  test_handle_employer_timeout.py  test_record_employer_response.py  test_submit_claim.py
tests/domain/: test_adjudication_case.py  test_claim.py  test_payment_schedule.py
tests/fakes/: fake_case_repository.py  fake_claim_repository.py  fake_payment_gateway.py  fake_schedule_repository.py  fake_wage_gateway.py
tests/integration/: test_claim_lifecycle.py
tests/unit/: test_benefit_calculator.py  test_eligibility_policy.py
(+15 files in other folders)
